# bitfinex-ws-gateway-js

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.build  README.md  package-lock.json  package.json  pre-build.sh
deploy/terraform/ecr/: ecr.tf  locals.tf  main.tf  variables.tf
deploy/terraform/ecs-service/: README.md  alarms.tf  cloudwatch-logs.tf  ecs.tf  iam.tf  locals.tf  main.tf  target-group.tf  variables.tf
mount-origin/: index.html
src/: CMakeLists.txt  bitfinex.js  depth.c  depth.h  healthcheck.js  index.js  main.c
src/bitfinex/: bitfinex-depth.c  bitfinex-depth.h  bitfinex.c  bitfinex.h
src/io/: c-json.h  strings.h  time.h
src/ws/: client-connect.c  client-connect.h  client-server-protocol.c  client-server-protocol.h  data.h
test/: CMakeLists.txt  file.h
test/bitfinex/: test-bitfinex-depth.c
